--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       Python version of the popular todo.txt-cli bash script.
     </div>
 
-    <p>Quite simply this is a summer/boredom project to reproduce a favorite utility of mine in a favorite language of mine. Hopefully some people will find it more readable than the old project.</p><h2>Dependencies</h2>
+    <p>Quite simply this is a summer/boredom project to reproduce a <a
+        href="https://github.com/ginatrapani/todo.txt-cli">favorite
+        utility</a> of mine in a <a href="http://python.org/">favorite
+        language</a> of mine. Hopefully some people will find it more readable than the old project.</p><h2>Dependencies</h2>
 <p>GitPython (I use 0.3.2-RC1)</p>
 <h2>Install</h2>
 <p>None at the moment.</p>
