Working on gh-page.

--- a/index.html
+++ b/index.html
@@ -55,13 +55,18 @@
         language</a> of mine. Hopefully some people will find it more readable than the old project.</p><h2>Dependencies</h2>
 <p>GitPython (I use 0.3.2-RC1)</p>
 <h2>Install</h2>
-<p>None at the moment.</p>
+<p>Run install.sh -h to see options for installation of the project. This script
+will also update the script for you when run after updating the repository.</p>
+<h2>Example Usages</h2>
+<p>After installing the todo.py, you can use the following examples substituting
+the alias used for 't' in these examples.
+<pre>sigma@virus24:~/ t</pre>
 <h2>License</h2>
 <p>GPL v3 (Included in the source)</p>
 <h2>Authors</h2>
-<p>SigmaVirus24 (graffatcolmingov@gmail.com)<br/><br/>      </p>
+<p>SigmaVirus24 (gmail: graffatcolmingov)<br/><br/>      </p>
 <h2>Contact</h2>
-<p>graffatcolmingov@gmail.com<br/>      </p>
+<p>gmail: graffatcolmingov<br/>      </p>
 
 
     <h2>Download</h2>
