--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@ will also update the script for you when run after updating the repository.</p>
 <h2>Example Usages</h2>
 <p>After installing the todo.py, you can use the following examples substituting
 the alias used for 't' in these examples.
-<pre>sigma@virus24:~/ t</pre>
+<pre>sigma@virus24:~/ t
+Would you like to create a new git repository in /home/sigma/.todo? [y/N] y
+Initialized empty Git repository in /home/sigma/.todo/.git/
+Would you like /home/sigma/bin/todo.py to help you configure your new git repository? [y/n] y
+First configure your local repository options.
+git config user.name Sigma Virus?
+git config user.email gmail: graffatcolmingov
+Would you like to add a remote repository? y
+Remote hostname: github
+Remote path: sigmavirus24/todo_example
+Remote user: sigmavirus24
+Remote branch: master
+Press enter when you have initialized a bare repository on the remote or are ready to proceed.
+</pre>
 <h2>License</h2>
 <p>GPL v3 (Included in the source)</p>
 <h2>Authors</h2>
