--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ Remote path: sigmavirus24/todo_example
 Remote user: sigmavirus24
 Remote branch: master
 Press enter when you have initialized a bare repository on the remote or are ready to proceed.
+Default configuration completed. Please re-run /home/sigma/bin/todo.py with '-h' and 'help' separately.
+
+sigma@virus24:~/ t ls
 </pre>
 <h2>License</h2>
 <p>GPL v3 (Included in the source)</p>
