--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@ And more commands can be seen by using
 <p>GPL v3 (Included in the source)</p>
 <h2>Authors</h2>
 <p>SigmaVirus24 (gmail: graffatcolmingov)<br/><br/>      </p>
+<h2>Contributors</h2>
+<p>jvstein (https://github.com/jvstein)<br/><br/>     </p>
 <h2>Contact</h2>
 <p>gmail: graffatcolmingov<br/>      </p>
 
