--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ And more commands can be seen by using
 <h2>Authors</h2>
 <p>SigmaVirus24 (gmail: graffatcolmingov)<br/><br/>      </p>
 <h2>Contributors</h2>
-<p>jvstein (https://github.com/jvstein)<br/><br/>     </p>
+<p>jvstein (<a>https://github.com/jvstein</a>)<br/><br/>     </p>
 <h2>Contact</h2>
 <p>gmail: graffatcolmingov<br/>      </p>
 
