--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ And more commands can be seen by using
 <h2>License</h2>
 <p>GPL v3 (Included in the source)</p>
 <h2>Authors</h2>
-<p>SigmaVirus24 (gmail: graffatcolmingov)<br/><br/>      </p>
-<p>jvstein (<a href="https://github.com/jvstein">https://github.com/jvstein</a>)<br/><br/>     </p>
+<p>SigmaVirus24 (gmail: graffatcolmingov)<br/><br/> 
+jvstein (<a href="https://github.com/jvstein">https://github.com/jvstein</a>)<br/><br/>     </p>
 <h2>Contributors</h2>
 <h2>Contact</h2>
 <p>gmail: graffatcolmingov<br/>      </p>
