--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
+    body p {
+      margin: 0 0 0 0;
+    }
     #container {
       margin: 0 auto;
       width: 700px;
