One more CSS change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #000000;
     }
     body p {
-      margin: 0 0 0 0;
+      margin: 0 0 0 2px;
     }
     #container {
       margin: 0 auto;
