CSS & HTML changes.
Remove "Contributors" section since jvstein is now a collaborator and no one
else is contributing changes. Change some CSS and modify dependencies.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #000000; margin-top: 3px; }
+    h1 { font-size: 3.8em; color: #000000; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #000000; }
@@ -55,8 +55,11 @@
     <p>Quite simply this is a summer/boredom project to reproduce a <a
         href="https://github.com/ginatrapani/todo.txt-cli">favorite
         utility</a> of mine in a <a href="http://python.org/">favorite
-        language</a> of mine. Hopefully some people will find it more readable than the old project.</p><h2>Dependencies</h2>
-<p>GitPython (I use 0.3.2-RC1)</p>
+        language</a> of mine. Hopefully some people will find it more readable than the old project.</p>
+
+<h2>Dependencies</h2>
+<p>[ <b>master</b>] GitPython (I use 0.3.2-RC1)</p>
+<p>[<b>gitless</b>] None</p>
 <h2>Install</h2>
 <p>Run install.sh -h to see options for installation of the project. This script
 will also update the script for you when run after updating the repository.</p>
@@ -121,7 +124,6 @@ And more commands can be seen by using
 <h2>Authors</h2>
 <p>SigmaVirus24 (gmail: graffatcolmingov)<br/>
 jvstein (<a href="https://github.com/jvstein">https://github.com/jvstein</a>)<br/></p>
-<h2>Contributors</h2>
 <h2>Contact</h2>
 <p>gmail: graffatcolmingov<br/>      </p>
 
