Add gitless download links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         language</a> of mine. Hopefully some people will find it more readable than the old project.</p>
 
 <h2>Dependencies</h2>
-<p>[ <b>master</b>] GitPython (I use 0.3.2-RC1)</p>
+<p>[<b>master</b>] GitPython (I use 0.3.2-RC1)</p>
 <p>[<b>gitless</b>] None</p>
 <h2>Install</h2>
 <p>Run install.sh -h to see options for installation of the project. This script
@@ -133,6 +133,11 @@ jvstein (<a href="https://github.com/jvstein">https://github.com/jvstein</a>)<b
       You can download this project in either
       <a href="http://github.com/sigmavirus24/Todo.txt-python/zipball/master">zip</a> or
       <a href="http://github.com/sigmavirus24/Todo.txt-python/tarball/master">tar</a> formats.
+      Or if you would prefer to download from the gitless branch: 
+      <a
+          href="http://github.com/sigmavirus24/Todo.txt-python/zipball/gitless">zip</a>,
+      <a
+          href="http://github.com/sigmavirus24/Todo.txt-python/tarball/gitless">tar</a>.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
