Update download links.

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
     </p>
 
     <div class="download">
-          <a href="http://github.com/sigmavirus24/Todo.txt-python/zipball/master">
+          <a
+              href="http://github.com/sigmavirus24/Todo.txt-python/todo.txt-python-0.2.zip">
               <img border="0" width="90" src="http://github.com/images/modules/download/zip.png">
           </a>
 
-          <a href="http://github.com/sigmavirus24/Todo.txt-python/tarball/master">
+          <a
+              href="http://github.com/sigmavirus24/Todo.txt-python/todo.txt-python-0.2.tar.gz">
               <img border="0" width="90" src="http://github.com/images/modules/download/tar.png">
           </a>
     </div>
@@ -94,14 +96,10 @@
     <h2>Download</h2>
     <p>
       You can download this project in either <a
-          href="http://github.com/sigmavirus24/Todo.txt-python/zipball/master">zip</a>
+          href="https://github.com/downloads/sigmavirus24/Todo.txt-python/todo.txt-python-0.2.zip">zip</a>
       or <a
-          href="http://github.com/sigmavirus24/Todo.txt-python/tarball/master">tar</a>
-      formats.  Or if you would prefer to download from the gitless branch:
-      <a
-          href="http://github.com/sigmavirus24/Todo.txt-python/zipball/gitless">zip</a>,
-      <a
-          href="http://github.com/sigmavirus24/Todo.txt-python/tarball/gitless">tar</a>.
+          href="https://github.com/downloads/sigmavirus24/Todo.txt-python/todo.txt-python-0.2.tar.gz">tar</a>
+      formats.
     </p>
     <p>
     You can also clone the project with <a href="http://git-scm.com">Git</a>
