Update description of dependencies. Minor changes.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
 
     <h2>Dependencies</h2>
     <p>
-    [<b>master</b>] GitPython (I use 0.3.2-RC1). <i>Soon, none</i>
-    </p>
-    <p>
-    [<b>gitless</b>] None
+    [<b>master</b>] GitPython (0.3.2-RC1) ONLY if you want to use the git
+    integration features.
     </p>
 
     <h2>Install</h2>
@@ -57,7 +55,7 @@
     <p>
     We've started to keep track of these on the <a
         href="http://git.io/todo.py-wiki">wiki</a>. Specifically <a
-        href="https://github.com/sigmavirus24/Todo.txt-python/wiki/help">here</a>
+        href="https://github.com/sigmavirus24/Todo.txt-python/wiki/help">here</a>.
     </p>
 
     <h2>License</h2>
@@ -102,7 +100,7 @@
       formats.
     </p>
     <p>
-    You can also clone the project with <a href="http://git-scm.com">Git</a>
+    You can also clone the project with <a href="http://git-scm.com">git</a>
     by running: 
 <pre>$ git clone git://github.com/sigmavirus24/Todo.txt-python</pre>
     </p>
