--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h2>Authors</h2>
     <p>
     See this <a
-        href=https://github.com/sigmavirus24/Todo.txt-python/contributors">list</a>
+        href="https://github.com/sigmavirus24/Todo.txt-python/contributors">list</a>
     of contributors.
     </p>
 
