Clean-up the website. Simpler is better.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
       <meta charset='utf-8'>
       <link rel="stylesheet" type="text/css" href="default.css"
       title="default" media="screen,project" />
-      <link re="stylesheet" type="text/css"
+      <link href='http://fonts.googleapis.com/css?family=Lusitana' 
+      rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400italic"
       />
 
@@ -15,9 +17,11 @@
     </head>
 
     <body>
+        <!--
         <a href="http://github.com/sigmavirus24/Todo.txt-python">
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
         </a>
+        -->
 
       <div id="container">
 
@@ -28,6 +32,14 @@
         <div class="description">
           Python port of the popular <a
               href="https://github.com/ginatrapani/todo.txt-cli">todo.txt-cli</a> bash script.
+        </div>
+
+        <div class="menu">
+        <hr />
+            <a href="http://git.io/todo.py">Fork me on GitHub</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Download: <a href="">tar.gz</a> <a href="">zip</a>
+        <hr />
         </div>
 
         <p>
@@ -78,6 +90,7 @@
     graffatcolmingov).
     </p>
 
+        <!--
     <div class="download">
           <a
               href="http://github.com/sigmavirus24/Todo.txt-python/todo.txt-python-0.2.1.zip">
@@ -89,25 +102,15 @@
               <img border="0" width="90" src="http://github.com/images/modules/download/tar.png">
           </a>
     </div>
+          -->
 
 
-    <h2>Download</h2>
+    <h2>Cloning</h2>
     <p>
-      You can download this project in either <a
-          href="https://github.com/downloads/sigmavirus24/Todo.txt-python/todo.txt-python-0.2.1.zip">zip</a>
-      or <a
-          href="https://github.com/downloads/sigmavirus24/Todo.txt-python/todo.txt-python-0.2.1.tar.gz">tar</a>
-      formats.
-    </p>
-    <p>
-    You can also clone the project with <a href="http://git-scm.com">git</a>
+    You can clone the project with <a href="http://git-scm.com">git</a>
     by running: 
 <pre>$ git clone git://github.com/sigmavirus24/Todo.txt-python</pre>
     </p>
-
-        <div class="footer">
-          get the source code on GitHub : <a href="http://github.com/sigmavirus24/Todo.txt-python">sigmavirus24/Todo.txt-python</a>
-        </div>
 
       </div>
     </body>
