Change the menu.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <div class="menu">
         <hr />
-            <a href="http://git.io/todo.py">Fork me on GitHub</a>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Download: <a href="">tar.gz</a> <a href="">zip</a>
+            [<a href="http://git.io/todo.py">GitHub</a>]
+            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Download: --> [<a href="">tar.gz</a>] [<a href="">zip</a>]
         <hr />
         </div>
 
