Add GPLv3 logo.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 <pre>$ git clone git://github.com/sigmavirus24/Todo.txt-python</pre>
     </p>
 
-      </div>
+    <img src="gplv3.png" alt="GPL version 3" />
+    </div>
     </body>
 </html>
